# octantmud

./: Account.cc  Account.h  Character.cc  Character.h  Colour.cc  Colour.h  Config.cc  Config.h  DataFile.h  DataHandle.cc  DataHandle.h  Database.cc  Database.h  Descriptor.cc  Descriptor.h  Game.cc  Game.h  GamePoll.cc  GamePoll.h  GamePort.cc  GamePort.h  GameString.cc  GameString.h  Location.cc  Location.h  Makefile.am  Makefile.in  Object.cc  Object.h  Parser.h  QueryResult.cc  QueryResult.h  Sys_Uid.h  THANKS  TextQueue.cc  TextQueue.h  account.sql  aclocal.m4  antibot.cc  character.sql  (+24 more)
db/acct/: Mysid
db/acct/M/: Mysid
text/: name.txt  welcome.txt
